# ecsfp

./: .gitignore  LICENSE  README.md  README_EN.md  pyecs.py  pyproject.toml
ecsfp/: __init__.py
examples/: mine_sweeper.py  snake.py
tests/: test_ecs.py
